[package]
name = "nullnet-proxy-test"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
pingora-core = { version = "0.6.0", features = ["rustls"] }
pingora-proxy = "0.6.0"
ipnetwork = { version = "0.21.1", features = ["serde"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
toml = "0.9.10"
tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
prost = "0.13.5"

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
serde_test = "1.0.177"
